<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>
    <string name="title_hello">Привет, Практикум</string>
    <string name="find">Поиск</string>
    <string name="mediateck">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="black_threme" translatable="true">Темная тема</string>
    <string name="sharing" translatable="true">Поделиться приложением</string>
    <string name="write_support" translatable="true">Написать в поддержку</string>
    <string name="agreement" translatable="true">Пользовательское соглашение</string>
    <string name="search" translatable="true">Поиск</string>
    <string name="settings_share" translatable="false">https://practicum.yandex.ru/android-developer/?from=catalog/</string>
    <string name="settings_mail_message" translatable="false">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="settings_mail_subject" translatable="false">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="settings_mail" translatable="false">rt10000@ya.ru</string>
    <string name="settings_agreement" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_found" translatable="false">Ничего не нашлось</string>
    <string name="server_error" translatable="false">Ошибка на сервере</string>
    <string name ="something_went_wrong" translatable="false">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh" translatable="false">Обновить</string>
    <string name="search_history" translatable="false">Вы искали</string>
    <string name="search_clear" translatable="false">Очистить историю</string>
    <string name="country" translatable="false">Страна</string>
    <string name="genre" translatable="false">Жанр</string>
    <string name="year" translatable="false">Год</string>
    <string name="album" translatable="false">Альбом</string>
    <string name="duration" translatable="false">Длительность</string>


</resources>