<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/main_activity_background"
    android:padding="@dimen/dp_16">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="22sp" />
    </FrameLayout>

    <Button
        android:id="@+id/btnFind"
        style="@style/MainMenuButtonStyle"
        android:layout_marginTop="24dp"
        android:text="@string/find"
        app:icon="@drawable/find"/>

    <Button
        android:id="@+id/btnMedia"
        style="@style/MainMenuButtonStyle"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/mediateck"
        app:icon="@drawable/media"/>

    <Button
        android:id="@+id/btnSetting"
        style="@style/MainMenuButtonStyle"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/settings"
        app:icon="@drawable/settings"/>
</LinearLayout>


