<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <ImageView
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:src="@drawable/arrow_back"
           android:paddingRight="12dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="22sp"
           android:paddingLeft="12dp"
           android:textColor="@color/black"/>


    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:paddingBottom="21dp">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/black_threme"
           android:textSize="@dimen/setting_font"
          android:layout_gravity="start"
          android:textColor="@color/black"/>

        <Switch
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:layout_gravity="end"/>

    </FrameLayout>>

     <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/setting_top_padding"
        android:paddingBottom="@dimen/setting_bottom_padding" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sharing"
            android:textSize="@dimen/setting_font"
            android:layout_gravity="start"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/share"/>

    </FrameLayout>>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/setting_top_padding"
        android:paddingBottom="@dimen/setting_bottom_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/write_support"
            android:textSize="@dimen/setting_font"
            android:layout_gravity="start"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/support"/>

    </FrameLayout>>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/setting_top_padding"
        android:paddingBottom="@dimen/setting_bottom_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreement"
            android:textSize="@dimen/setting_font"
            android:layout_gravity="start"
            android:textColor="@color/black"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/arrow_forward"/>

    </FrameLayout>>



</LinearLayout>